--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
       </main>
       <footer>
-        <p>&copy; 2020 wasshoy</p>
+        <p>&copy; 2020 <a href="https://github.com/wasshoy/color-calculator" target="blank">wasshoy</a></p>
       </footer>
     </div>
     <script src="js/main.js"></script>
