change copy of result

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           </form>
           <div class="reslut-box">
-            <p id="result" class="result-box--text">Result</p>
+            <p id="result" onclick="copyToClipboard()">Result</p>
           </div>
       </main>
       <footer>
